Removed the quadrant lines from the custom object
Made the scale undraggable
Reduced the width of the text boxes
Made it so the density slider neither snaps nor changes the selected material
Removed title "Propertes" from custom object control panel
Added "Material" label before object material combo box
Reduced the slider width from 400 to 250
Switched to aluminum instead of lead as highest tick on density slider
Fixed: Null pointer exception once when pressing reset all on the mystery object tab after setting the custom object to be lead
# 0.01.17 (43290) Aug 19, 2010
Fixed units for scale readouts
Fixed: Scale readout doesn't always update
Alphabetized mystery substance table 
Fixed: One of the smaller blocks reads "0.5 k" and the "g" is cut off.
Fixed: Visual artifacts when the block is dropped onto the ground next to the pool; its face nearest the pool flickers.
Fixed: The pool readout should be L, not kg/L
# 0.01.16 (43273) Aug 18, 2010
Fixed: Density and Buoyancy links have the same name on a published dev page
Fixed: Object texture doesn't change when switching from Custom to Lead, while at the Lead density value.
Improvements for slider controls
Fixed: Clicking in the play area causes focus to cycle through components
Improved background and earth graphic now that toybox is implemented differently
Refactored MyMesh and GroundNode to use planes instead of triangles
Refactored MyMesh and GroundNode to use symbolic vertex names
Fixes for box2d and units
Fixed: Mass changes slightly (~1%) when modifying the volume for a custom object
Internationalized strings
Added initial support for continuous color changing of the block color as density changes
Added labeled tick marks to the side of the pool
Fixed: Pool volume readout shows up in the wrong location briefly on startup.
Fixed: Objects shouldn't poke through front of pool
Fixed: Density slider should snap to tick marks and change the substance type when near to a tick mark.