@@ -1,3 +1,6 @@
+Retitled "modes" to "objects", then items should read "custom", "same mass", "mystery", etc
+Reduced the height of the empty title borders
+Added insets/padding around the white control panels
 Removed the quadrant lines from the custom object
 Made the scale undraggable
 Reduced the width of the text boxes
